syntax = "proto3";

package kurrentdb.protocol.v2.indexes;

option csharp_namespace = "KurrentDB.Protocol.V2.Indexes";

enum IndexFieldType {
  INDEX_FIELD_TYPE_UNSPECIFIED = 0;
  INDEX_FIELD_TYPE_STRING = 1;
  INDEX_FIELD_TYPE_DOUBLE = 2;
//  INDEX_FIELD_TYPE_INT_16 = 3;
  INDEX_FIELD_TYPE_INT_32 = 4;
  INDEX_FIELD_TYPE_INT_64 = 5;
//  INDEX_FIELD_TYPE_UINT_32 = 6;
//  INDEX_FIELD_TYPE_UINT_64 = 7;
}

message IndexField {
  string name = 1;
  string selector = 2;
  reserved 3; // selector type (js, json path, surge style js)
  IndexFieldType type = 4;
}

enum IndexState {
  INDEX_STATE_UNSPECIFIED = 0;
  INDEX_STATE_STARTED = 1;
  INDEX_STATE_STOPPED = 2;
  INDEX_STATE_DELETED = 3;
}
